// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum BinaryauthorizationBetaPolicyAdmissionRuleEvaluationModeEnum {
  BinaryauthorizationBetaPolicyAdmissionRuleEvaluationModeEnumNO_VALUE_DO_NOT_USE = 0;
  BinaryauthorizationBetaPolicyAdmissionRuleEvaluationModeEnumALWAYS_ALLOW = 1;
  BinaryauthorizationBetaPolicyAdmissionRuleEvaluationModeEnumALWAYS_DENY = 2;
  BinaryauthorizationBetaPolicyAdmissionRuleEvaluationModeEnumREQUIRE_ATTESTATION = 3;
}

enum BinaryauthorizationBetaPolicyAdmissionRuleEnforcementModeEnum {
  BinaryauthorizationBetaPolicyAdmissionRuleEnforcementModeEnumNO_VALUE_DO_NOT_USE = 0;
  BinaryauthorizationBetaPolicyAdmissionRuleEnforcementModeEnumENFORCEMENT_MODE_UNSPECIFIED = 1;
  BinaryauthorizationBetaPolicyAdmissionRuleEnforcementModeEnumENFORCED_BLOCK_AND_AUDIT_LOG = 2;
  BinaryauthorizationBetaPolicyAdmissionRuleEnforcementModeEnumDRYRUN_AUDIT_LOG_ONLY = 3;
}

enum BinaryauthorizationBetaPolicyGlobalPolicyEvaluationModeEnum {
  BinaryauthorizationBetaPolicyGlobalPolicyEvaluationModeEnumNO_VALUE_DO_NOT_USE = 0;
  BinaryauthorizationBetaPolicyGlobalPolicyEvaluationModeEnumGLOBAL_POLICY_EVALUATION_MODE_UNSPECIFIED = 1;
  BinaryauthorizationBetaPolicyGlobalPolicyEvaluationModeEnumENABLE = 2;
  BinaryauthorizationBetaPolicyGlobalPolicyEvaluationModeEnumDISABLE = 3;
}

message BinaryauthorizationBetaPolicy {
  repeated BinaryauthorizationBetaPolicyAdmissionWhitelistPatterns admission_whitelist_patterns = 1;
  map<string, BinaryauthorizationBetaPolicyAdmissionRule> cluster_admission_rules = 2;
  map<string, BinaryauthorizationBetaPolicyAdmissionRule> kubernetes_namespace_admission_rules = 3;
  map<string, BinaryauthorizationBetaPolicyAdmissionRule> kubernetes_service_account_admission_rules = 4;
  map<string, BinaryauthorizationBetaPolicyAdmissionRule> istio_service_identity_admission_rules = 5;
  BinaryauthorizationBetaPolicyAdmissionRule default_admission_rule = 6;
  string description = 7;
  BinaryauthorizationBetaPolicyGlobalPolicyEvaluationModeEnum global_policy_evaluation_mode = 8;
  string self_link = 9;
  string project = 10;
  string update_time = 11;
}

message BinaryauthorizationBetaPolicyAdmissionWhitelistPatterns {
  string name_pattern = 1;
}

message BinaryauthorizationBetaPolicyAdmissionRule {
  BinaryauthorizationBetaPolicyAdmissionRuleEvaluationModeEnum evaluation_mode = 1;
  repeated string require_attestations_by = 2;
  BinaryauthorizationBetaPolicyAdmissionRuleEnforcementModeEnum enforcement_mode = 3;
}

message ApplyBinaryauthorizationBetaPolicyRequest {
  BinaryauthorizationBetaPolicy resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteBinaryauthorizationBetaPolicyRequest {
  string service_account_file = 1;
  BinaryauthorizationBetaPolicy resource = 2;
}

message ListBinaryauthorizationBetaPolicyRequest {
  string service_account_file = 1;
}

message ListBinaryauthorizationBetaPolicyResponse {
  repeated BinaryauthorizationBetaPolicy items = 1;
}

service BinaryauthorizationBetaPolicyService {
  rpc ApplyBinaryauthorizationBetaPolicy(ApplyBinaryauthorizationBetaPolicyRequest) returns (BinaryauthorizationBetaPolicy);
  rpc DeleteBinaryauthorizationBetaPolicy(DeleteBinaryauthorizationBetaPolicyRequest) returns (google.protobuf.Empty);
  rpc ListBinaryauthorizationBetaPolicy(ListBinaryauthorizationBetaPolicyRequest) returns (ListBinaryauthorizationBetaPolicyResponse);
}
